--- a/client/TabSwitcher/AndroidManifest.xml
+++ b/client/TabSwitcher/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.github.notonepine.tabswitcher.MainActivity"
+            android:name="com.notonepine.tabswitcher.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
